--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
          precision mediump float;
 
          attribute vec3 vPosition;
-         attribute vec3 vColor;
-         varying vec3 fColor;
+         attribute vec2 vTexCoord;
+
+         varying vec2 fTexCoord;
 
          uniform mat4 modelViewMatrix;
 
          void main() {
-            fColor = vColor;
+            fTexCoord = vTexCoord;
             gl_Position = modelViewMatrix * vec4(vPosition, 1.0);
          }
       </script>
       <script id="fragment-shader" type="x-shader/x-fragment">
          precision mediump float;
 
-         varying vec3 fColor;
+         varying vec2 fTexCoord;
+
+         uniform sampler2D texture;
 
          void main()
          {
-           gl_FragColor = vec4(fColor, 1.0);
+           gl_FragColor = texture2D( texture, fTexCoord );
          }
       </script>
 
